--- a/스프링 핵심 원리 - 기본편/01. 객체 지향 설계와 스프링.md
+++ b/스프링 핵심 원리 - 기본편/01. 객체 지향 설계와 스프링.md
@@ -96,7 +96,7 @@
 | OCP | 개방-폐쇄 원칙 <br>(open-closed principle) | - 소프트웨어 요소는 확장에는 열려 있으나 변경에는 닫혀 있어야 한다. <br>- MemberService 클라이언트가 구현 클래스를 직접 선택 <br>````java MemberRepository m = new MemoryMemberRepository(); // 기존 코드 ````<br>````java MemberRepository m = new JdbcMemberRepository(); // 변경 코드 ```` <br>- 구현 객체를 변경하려면 클라이언트 코드를 변경해야 한다. <br>- 분명 다형성을 사용했지만 OCP 원칙을 지킬 수 없다. <br>- 이 문제를 해결하기 위해서는 객체를 생성하고 연관관계를 맺어주는 별도의 조립, 설정자가 필요하다.|
 | LSP | 리스코프 치환 원칙 <br>(Liskov substitution principle) | 프로그램의 객체는 프로그램의 `정확성`을 깨뜨리지 않으면서 하위 타입의 인스턴스로 바꿀 수 있어야 한다. <br>- ex) 자동차 인터페이스의 엑셀은 앞으로 가라는 기능이며, 뒤로 가게 구현하면 LSP 위반! 느리더라도 앞으로 가야한다. |
 | ISP | 인터페이스 분리 원칙 <br>(interface segregation principle) | - 특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫다. <br>- 자동차 인터페이스 --> 운전 인터페이스, 정비 인터페이스로 분리 <br>- 사용자 클라이언트 --> 운전자 클라이언트, 정비사 클라이언트로 분리 <br>- 분리하면 정비 인터페이스 자체가 변해도 운전자 클라이언트에 영향을 주지 않는다. <br>- 인터페이스가 명확해지고, 대체 가능성이 높아진다. |
-| DIP | 의존관계 역전 원칙 <br>(dependency inversion principle) | - 프로그래머는 `추상화에 의존해야지, 구체화에 의존하면 안된다.` 의존성 주입은 이 원칙을 따르는 방법 중 하나 <br>- 즉, 구현 클래스에 의존하지 말고, 인터페이스에 의존하라는 뜻 (역할에 의존!) <br>  - 그러나 OCP에서 설명한 MemberService는 인터페이스(추상화인 MemberRepository)에 의존하지만, 구현 클래스(구체화인 MemoryMemberRepository)도 동시에 의존한다. ````java MemberRepository m = new MemoryMemberRepository(); // DIP 위반 ```` |
+| DIP | 의존관계 역전 원칙 <br>(dependency inversion principle) | - 프로그래머는 `추상화에 의존해야지, 구체화에 의존하면 안된다.` 의존성 주입은 이 원칙을 따르는 방법 중 하나 <br>- 즉, 구현 클래스에 의존하지 말고, 인터페이스에 의존하라는 뜻 (역할에 의존!) <br>  - 그러나 OCP에서 설명한 MemberService는 인터페이스(추상화인 MemberRepository)에 의존하지만, 구현 클래스(구체화인 MemoryMemberRepository)도 동시에 의존한다. <br>````java MemberRepository m = new MemoryMemberRepository(); // DIP 위반 ```` |
 
 ### 💡 정리
 - 객체 지향의 핵심은 `다형성`
