02. 스프링 핵심 원리 이해1 - 예제 만들기 (진행중)

--- a/스프링 핵심 원리 - 기본편/02. 스프링 핵심 원리 이해1 - 예제 만들기.md
+++ b/스프링 핵심 원리 - 기본편/02. 스프링 핵심 원리 이해1 - 예제 만들기.md
@@ -30,3 +30,220 @@ dependencies {
 
 
 - - -
+## ✔ 비즈니스 요구사항과 설계
+### 1. 요구사항: `회원`
+- 회원가입 및 조회 가능
+- 회원은 일반과 VIP 두 가지 등급
+- 회원 데이터는 자체 DB를 구축할 수 있고, 외부 시스템과 연동 가능 (미확정)
+
+### 2. 요구사항: `주문과 할인 정책`
+- 회원은 상품 주문이 가능
+- 회원 등급에 따라 할인 정책 적용
+- 할인 정책
+  - 모든 VIP는 1,000원 고정 금액 할인 (나중에 변경될 수 있음)
+- 할인 정책은 변경 가능성이 높다. 회사의 기본 할인 정책을 아직 정하지 못했고, 오픈 직전까지 고민 & 최악의 경우 할인을 적용하지 않을 수도 있다. (미확정)
+
+### 3. 설계
+요구사항을 보면 회원 데이터, 할인 정책은 현재 결정하기 어려우며, 그렇다고 이런 정책이 결정될 때까지 개발을 무기한 기다릴 수도 없다.
+따라서, `인터페이스를 만들고 구현체를 언제든지 갈아끼울 수 있도록 설계`!
+
+
+- - -
+## ✔ 회원 도메인 설계
+```
+- 회원가입 및 조회 가능
+- 회원은 일반과 VIP 두 가지 등급
+- 회원 데이터는 자체 DB를 구축할 수 있고, 외부 시스템과 연동 가능 (미확정)
+```
+### 1. 회원 도메인 협력 관계
+![회원 도메인 협력 관계](https://user-images.githubusercontent.com/54324782/207591636-514518b5-9e07-479b-8bb1-a6b940856491.png)
+
+### 2. 회원 클래스 다이어그램
+![회원 클래스 다이어그램](https://user-images.githubusercontent.com/54324782/207592517-9f931a33-c1fc-496f-92f7-1799dc25eb29.png)
+
+### 3. 회원 객체 다이어그램
+![회원 객체 다이어그램](https://user-images.githubusercontent.com/54324782/207592957-9a8a55ea-e23d-47af-bc72-0423a6b532bc.png)
+
+
+- - -
+## ✔ 회원 도메인 개발
+### 1. 회원 등급 정의
+hello.core.member > Grade.java (Enum)
+````java
+package hello.core.member;
+
+public enum Grade { // 회원 등급
+    BASIC,
+    VIP
+}
+````
+
+### 2. 회원 Entity 정의
+hello.core.member > Member.java (Class)
+````java
+package hello.core.member;
+
+public class Member { // 회원 Entity
+    private Long id; // 아이디
+    private String name; // 이름
+    private Grade grade; // 등급
+
+    // 생성자
+    public Member(Long id, String name, Grade grade) {
+        this.id = id;
+        this.name = name;
+        this.grade = grade;
+    }
+
+    // Get, Set을 통해 값을 세팅
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public Grade getGrade() {
+        return grade;
+    }
+
+    public void setGrade(Grade grade) {
+        this.grade = grade;
+    }
+}
+````
+
+### 3. 회원 저장소 정의
+- hello.core.member > MemberRepository.java (Interface)
+````java
+package hello.core.member;
+
+public interface MemberRepository {
+
+    void save(Member member); // 회원 저장
+
+    Member findById(Long memberId); // 회원을 찾아주는 기능
+}
+
+````
+
+- hello.core.member > MemoryMemberRepository.java (Class)
+````java
+package hello.core.member;
+
+import java.util.HashMap;
+import java.util.Map;
+
+public class MemoryMemberRepository implements MemberRepository {
+    private static Map<Long, Member> store = new HashMap<>();
+
+    @Override
+    public void save(Member member) {
+        store.put(member.getId(), member);
+    }
+
+    @Override
+    public Member findById(Long memberId) {
+        return store.get(memberId);
+    }
+}
+````
+
+### 4. 회원 서비스 정의
+- hello.core.member > MemberService.java (Interface)
+
+````java
+package hello.core.member;
+
+public interface MemberService {
+
+    void join(Member member); // 회원가입
+
+    Member findMember(Long memberId); // 회원조회
+}
+
+````
+- hello.core.member > MemberServiceImpl.java (Class)
+
+````java
+package hello.core.member;
+
+public class MemberServiceImpl implements MemberService {
+
+    private final MemberRepository memberRepository = new MemoryMemberRepository();
+
+    @Override
+    public void join(Member member) {
+        memberRepository.save(member);
+    }
+
+    @Override
+    public Member findMember(Long memberId) {
+        return memberRepository.findById(memberId);
+    }
+}
+
+````
+
+- - -
+## ✔ 회원 도메인 실행과 테스트
+### 1. JUnit 생성
+test > java > hell.core.member > MemberServiceTest.java (Class)
+````java
+package hello.core.member;
+
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+public class MemberServiceTest {
+
+    MemberService memberService = new MemberServiceImpl();
+
+    @Test
+    void join() {
+        // given : ~한 환경이 주어졌을 때
+        Member member = new Member(1L, "memberA", Grade.VIP);
+
+        // when : ~했을 때
+        memberService.join(member);
+        Member findMember = memberService.findMember(1L);
+
+        // then : 이렇게 한다.
+        Assertions.assertThat(member).isEqualTo(findMember);
+    }
+}
+
+````
+
+### 2. JUnit 테스트 코드 실행
+- Tests passed
+![passed](https://user-images.githubusercontent.com/54324782/207604400-c94f5ba6-a1b0-4a3e-b680-462cb29cf72b.png)
+
+- Tests failed
+  - memberId를 2L로 수정 시 일치하지 않으므로 Tests failed
+
+````java
+// when
+memberService.join(member);
+Member findMember = memberService.findMember(2L);
+````
+![failed](https://user-images.githubusercontent.com/54324782/207605088-f6049187-222b-4045-a967-71f2cf32061f.png)
+
+### 💡 회원 도메인 설계의 문제점
+- 의존관계가 인터페이스 뿐만 아니라 구현까지 모두 의존하는 문제점이 있다.
+- 아래와 같이 실제 할당하는 부분이 구현체이므로, MemberServiceImpl은 MemberRepository와 MemoryMemberRepository() 둘 다 의존한다.
+  - 즉, 추상화에도 의존하고 구체화에도 의존한다. (DIP 위반)
+````java
+private final MemberRepository memberRepository = new MemoryMemberRepository();
+````
+
+- - -
