02. 스프링 핵심 원리 이해1 - 예제 만들기 (진행중)

--- a/스프링 핵심 원리 - 기본편/02. 스프링 핵심 원리 이해1 - 예제 만들기.md
+++ b/스프링 핵심 원리 - 기본편/02. 스프링 핵심 원리 이해1 - 예제 만들기.md
@@ -247,3 +247,31 @@ private final MemberRepository memberRepository = new MemoryMemberRepository();
 ````
 
 - - -
+## ✔ 주문과 할인 도메인 설계
+```
+- 회원은 상품 주문이 가능
+- 회원 등급에 따라 할인 정책 적용
+- 할인 정책
+  - 모든 VIP는 1,000원 고정 금액 할인 (나중에 변경될 수 있음)
+- 할인 정책은 변경 가능성이 높다. 회사의 기본 할인 정책을 아직 정하지 못했고, 오픈 직전까지 고민 & 최악의 경우 할인을 적용하지 않을 수도 있다. (미확정)
+```
+### 1. 주문 도메인 전체
+- `역할과 구현을 분리`해서 자유롭게 구현 객체를 조립할 수 있도록 설계 => 회원 저장소는 물론이고, 할인 정책도 유연하게 변경 가능
+  - 주문 생성: 클라이언트는 주문 서비스에 주문 생성을 요청한다.
+  - 회원 조회: 할인을 위해서는 회원 등급이 필요하다. 따라서 주문 서비스는 회원 저장소에서 회원을 조회한다.
+  - 할인 적용: 주문 서비스는 회원 등급에 따른 할인 여부를 할인 정책에 위임한다.
+  - 주문 결과 반환: 주문 서비스는 할인 결과를 포함한 주문 결과를 반환한다.
+
+![주문 도메인 전체](https://user-images.githubusercontent.com/54324782/208884455-7883d6d2-b3e0-4008-a1e2-ae882a6782e2.png)
+
+### 2. 주문 도메인 클래스 
+![주문 도메인 클래스](https://user-images.githubusercontent.com/54324782/208896261-ead15b68-e78c-4d4c-b299-52035250658a.png)
+
+### 3. 주문 도메인 객체 다이어그램1
+![주문 도메인 객체 다이어그램1](https://user-images.githubusercontent.com/54324782/208896693-16dba9f1-7f87-4870-9b2d-4a6e999ec870.png)
+
+### 4. 주문 도메인 객체 다이어그램2
+![주문 도메인 객체 다이어그램2](https://user-images.githubusercontent.com/54324782/208896787-a4a0ae4f-8e70-4a30-a665-12c6493e0b03.png)
+
+- - -
+## ✔ 주문과 할인 도메인 개발
