--- a/스프링 핵심 원리 - 기본편/02. 스프링 핵심 원리 이해1 - 예제 만들기.md
+++ b/스프링 핵심 원리 - 기본편/02. 스프링 핵심 원리 이해1 - 예제 만들기.md
@@ -419,3 +419,75 @@ public class OrderServiceImpl implements OrderService {
 
 - - -
 ## ✔ 주문과 할인 도메인 실행과 테스트
+### 1. 주문과 할인 정책 실행
+hello.core > OrderApp.java
+````java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import hello.core.order.Order;
+import hello.core.order.OrderService;
+import hello.core.order.OrderServiceImpl;
+
+public class OrderApp {
+
+    public static void main(String[] args) {
+        MemberService memberService = new MemberServiceImpl();
+        OrderService orderService = new OrderServiceImpl();
+
+        Long memberId = 1L;
+        Member member = new Member(memberId, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        Order order = orderService.createOrder(memberId, "itemA", 10000);
+
+        System.out.println("order = " + order); // toString() 를 호출
+        System.out.println("order.calculatePrice = " + order.calculatePrice());
+    }
+}
+````
+
+### 💡 결과
+![결과](https://user-images.githubusercontent.com/54324782/208903948-77374578-1066-4f01-b601-473c1e3e17bd.png)
+
+### 2. 주문과 할인 정책 테스트
+- JUnit 생성
+test > java > hell.core.order > OrderServiceTest.java (Class)
+````java
+package hello.core.order;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+public class OrderServiceTest {
+
+    MemberService memberService = new MemberServiceImpl();
+    OrderService orderService = new OrderServiceImpl();
+
+    @Test
+    void createOrder() {
+        Long memberId = 1L;
+        Member member = new Member(memberId, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        Order order = orderService.createOrder(memberId, "itemA", 10000);
+        Assertions.assertThat(order.getDiscountPrice()).isEqualTo(1000);
+    }
+}
+````
+
+- JUnit 테스트 코드 실행  
+Tests passed  
+![passed](https://user-images.githubusercontent.com/54324782/208906124-dd237591-e099-4fd0-84ce-7f1b391052ce.png)
+
+- hello.core 패키지 JUnit 테스트 코드 실행  
+Tests passed  
+![image](https://user-images.githubusercontent.com/54324782/208906681-f48aa07f-af46-4ca6-af70-dd2638013aea.png)
+
