03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용 (진행중)

--- a/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -68,3 +68,42 @@ class RateDiscountPolicyTest {
 | vip_o | vip_x |
 |:--------:|:--------:|
 | Tests passed<br>![image](https://user-images.githubusercontent.com/54324782/209412967-5bbe5b3a-36d1-4bdc-bf90-5a1db0415f3a.png) | Tests failed<br>![image](https://user-images.githubusercontent.com/54324782/209413003-7b9d645a-695f-46b1-9dd3-8342566ccb2f.png)
+
+- - -
+## ✔ 새로운 할인 정책 적용과 문제점
+- 할인 정책 변경을 위해 클라이언트인 `OrderServiceImpl` 코드를 수정
+````java
+public class OrderServiceImpl implements OrderService {
+    // private final DiscountPolicy discountPolicy = new FixDiscountPolicy();
+    private final DiscountPolicy discountPolicy = new RateDiscountPolicy();
+}
+````
+
+### 1. 문제점 발견
+- 역할과 구현을 충실하게 분리 --> OK
+- 다형성도 활용하고, 인터페이스와 구현 객체를 분리 --> OK
+- OCP, DIP 같은 객체지향 설계 원칙을 출실해 준수 --> __X__
+  - DIP 위반 : 구체화에 의존하지 않고 추상화에 의존해야 하는데, 둘 다 의존
+```
+- 추상(인터페이스) 의존 : DiscountPolicy
+- 구체(구현) 클래스 : FixDiscountPolicy, RateDiscountPolicy
+```
+  - OCP 위반 : 현재 코드는 기능을 확장해서 변경하면, 클라이언트 코드에 영향을 준다.
+    - 즉, `FixDiscountPolicy`를 `RateDiscountPolicy`로 변경하는 순간 `OrderServiceImpl`의 소스 코드도 함께 변경해야 한다.
+
+### 2. 어떻게 문제를 해결할 수 있을까?
+- DIP를 위반하지 않도록 인터페이스에만 의존하도록 의존관계를 변경
+````java
+public class OrderServiceImpl implements OrderService {
+    // private final DiscountPolicy discountPolicy = new RateDiscountPolicy();
+    private DiscountPolicy discountPolicy;
+}
+````
+
+- 하지만 실제 실행을 해보면 `NPE(Null Pointer Exception)`가 발생 !!!
+
+### 💡 해결 방안
+누군가가 클라이언트인 OrderServiceImpl에 `DiscountPolicy의 구현 객체를 대신 생성하고 주입`해주어야 한다.
+
+- - -
+## ✔ 관심사의 분리
