03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용 (진행중)

--- a/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -107,3 +107,205 @@ public class OrderServiceImpl implements OrderService {
 
 - - -
 ## ✔ 관심사의 분리
+### 1. AppConfig 등장
+- 애플리케이션의 전체 동작 방식을 구성(config)하기 위해, `구현 객체를 생성`하고 `연결`하는 책임을 가지는 별도의 설정 클래스 생성
+hello.core > AppConfig.java (class)
+````java
+package hello.core;
+
+import hello.core.discount.FixDiscountPolicy;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import hello.core.member.MemoryMemberRepository;
+import hello.core.order.OrderService;
+import hello.core.order.OrderServiceImpl;
+
+public class AppConfig {
+    
+    public MemberService memberService() {
+        return new MemberServiceImpl(new MemoryMemberRepository());
+    }
+    
+    public OrderService orderService() {
+        return new OrderServiceImpl(new MemoryMemberRepository(), new FixDiscountPolicy());
+    }
+}
+````
+- AppConfig는 애플리케이션의 실제 동작에 필요한 `구현 객체를 생성`
+  - MemberServiceImpl, MemoryMemberRepository, OrderServiceImpl, FixDiscountPolicy
+- AppConfig는 생성한 객체 인스턴스의 참조(레퍼런스)를 `생성자를 통해서 주입(연결)`해준다.
+  - MemberServiceImpl --> MemoryMemberRepository
+  - OrderServiceImpl --> MemoryMemberRepository, FixDiscountPolicy
+
+### 2. 생성자 주입 - MemberServiceImpl
+hello.core.member > MemberServiceImpl.java (class)
+````java
+package hello.core.member;
+
+public class MemberServiceImpl implements MemberService {
+
+    private final MemberRepository memberRepository;
+
+    public MemberServiceImpl(MemberRepository memberRepository) {
+        this.memberRepository = memberRepository;
+    }
+
+    @Override
+    public void join(Member member) {
+        memberRepository.save(member);
+    }
+
+    @Override
+    public Member findMember(Long memberId) {
+        return memberRepository.findById(memberId);
+    }
+}
+````
+- 설계 변경으로 `MemberServiceImpl`은 `MemoryMemberRepository`를 의존하지 않는다.
+- 단지 `MemberRepository` 인터페이스만 의존
+- `MemberServiceImpl` 입장에서 생성자를 통해 어떤 구현 객체가 들어올지(주입될지)는 알 수 없다.
+- `MemberServiceImpl`의 생성자를 통해서 어떤 구현 객체를 주입할지는 오직 외부(`AppConfig`)에서 결정된다.
+- `MemberServiceImpl`은 이제부터 `의존관계에 대한 고민은 외부`에 맡기고, `실행에만 집중`하면 된다.
+
+### 💡 클래스 다이어그램
+![클래스 다이어그램](https://user-images.githubusercontent.com/54324782/209415762-deeb435c-feec-4389-872c-70254d8795a9.png)
+
+- 객체의 생성과 연결은 `AppConfig`가 담당
+- `DIP 완성` : MemberServiceImpl은 MemberRepository인 추상에만 의존하면 되므로, 구체 클래스를 몰라도 된다.
+- `관심사의 분리` : 객체를 생성하고 연결하는 역할과 실행하는 역할이 명확히 분리됨
+
+### 💡 회원 객체 인스턴스 다이어그램
+![회원 객체 인스턴스 다이어그램](https://user-images.githubusercontent.com/54324782/209416012-f9902087-05fe-47c9-8166-2e1ac6367762.png)
+
+- AppConfig 객체는 memoryMemberRepository 객체를 생성하고 그 참조값을 memberServiceImpl을 생성하면서 생성자로 전달
+- 클라이언트인 memberServiceImpl 입장에서 보면 의존관계를 마치 `외부에서 주입`해주는 것 같다고 해서
+  `의존관계 주입 또는 의존성 주입 (DI: Dependency Injection)`이라 한다.
+  
+### 3. 생성자 주입 - OrderServiceImpl
+hello.core.order > OrderServiceImpl.java (class)
+````java
+package hello.core.order;
+
+import hello.core.discount.DiscountPolicy;
+import hello.core.member.Member;
+import hello.core.member.MemberRepository;
+
+public class OrderServiceImpl implements OrderService {
+
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+
+    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) { // 생성자 주입
+        this.memberRepository = memberRepository;
+        this.discountPolicy = discountPolicy;
+    }
+
+    @Override
+    public Order createOrder(Long memberId, String itemName, int itemPrice) {
+        Member member = memberRepository.findById(memberId);
+        int discountPrice = discountPolicy.discount(member, itemPrice);
+
+        return new Order(memberId, itemName, itemPrice, discountPrice);
+    }
+}
+````
+- 설계 변경으로 `OrderServiceImpl`은 `FixDiscountPolicy`를 의존하지 않는다.
+- 단지 `DiscountPolicy` 인터페이스만 의존
+- `OrderServiceImpl` 입장에서 생성자를 통해 어떤 구현 객체가 들어올지(주입될지)는 알 수 없다.
+- `OrderServiceImpl`의 생성자를 통해서 어떤 구현 객체를 주입할지는 오직 외부(`AppConfig`)에서 결정된다.
+- `OrderServiceImpl`은 이제부터 `실행에만 집중`하면 된다.
+- `OrderServiceImpl`에는 `MemoryMemberRepository`, `FixDiscountPolicy` 객체의 의존관계가 주입
+
+### 4. AppConfig 실행
+hello.core > MemberApp
+````java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+
+public class MemberApp {
+
+    public static void main(String[] args) {
+        AppConfig appConfig = new AppConfig();
+        MemberService memberService = appConfig.memberService(); // AppConfig 연결
+        Member member = new Member(1L, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        Member findMember = memberService.findMember(1L);
+        System.out.println("find Member = " + findMember.getName());
+        System.out.println("new member = " + member.getName());
+    }
+}
+````
+hello.core > OrderApp
+````java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import hello.core.order.Order;
+import hello.core.order.OrderService;
+
+public class OrderApp {
+
+    public static void main(String[] args) {
+        AppConfig appConfig = new AppConfig();
+        MemberService memberService = appConfig.memberService(); // AppConfig 연결
+        OrderService orderService = appConfig.orderService(); // AppConfig 연결
+
+        Long memberId = 1L;
+        Member member = new Member(memberId, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        Order order = orderService.createOrder(memberId, "itemA", 10000);
+
+        System.out.println("order = " + order); // toString() 를 호출
+        // System.out.println("order.calculatePrice = " + order.calculatePrice());
+    }
+}
+````
+
+### 💡 테스트 코드 수정
+test > java > hello.core.member > MemberServiceTest.java (class)
+````java
+public class MemberServiceTest {
+
+    MemberService memberService;
+
+    @BeforeEach // 테스트 실행 전에 무조건 실행
+    public void beforeEach() {
+        AppConfig appConfig = new AppConfig();
+        memberService = appConfig.memberService();
+    }
+    
+    @Test
+    .
+    .
+}
+````
+
+test > java > hello.core.order > OrderServiceTest.java (class)
+````java
+public class OrderServiceTest {
+
+    MemberService memberService;
+    OrderService orderService;
+    
+    @BeforeEach
+    public void beforeEach() {
+        AppConfig appConfig = new AppConfig();
+        memberService = appConfig.memberService();
+        orderService = appConfig.orderService();
+    }
+
+    @Test
+    .
+    .
+}
+````
+![Tests passed](https://user-images.githubusercontent.com/54324782/209416574-2deda2d8-f766-411e-891e-d77c54f7c6bf.png)
+
