--- a/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -309,3 +309,49 @@ public class OrderServiceTest {
 ````
 ![Tests passed](https://user-images.githubusercontent.com/54324782/209416574-2deda2d8-f766-411e-891e-d77c54f7c6bf.png)
 
+- - -
+## ✔ AppConfig 리팩터링
+현재 AppConfig를 보면 `중복`이 있고, 역할에 따른 구현이 잘 안보인다.
+
+- 리팩터링 전
+hello.core > AppConfig
+````java
+public class AppConfig {
+
+    public MemberService memberService() {
+        return new MemberServiceImpl(new MemoryMemberRepository());
+    }
+
+    public OrderService orderService() {
+        return new OrderServiceImpl(new MemoryMemberRepository(), new FixDiscountPolicy());
+    }
+}
+````
+
+- 리팩터링 후
+````java
+public class AppConfig {
+
+    public MemberService memberService() {
+        return new MemberServiceImpl(memberRepository());
+    }
+    
+    public OrderService orderService() {
+        return new OrderServiceImpl(memberRepository(), discountPolicy());
+    }
+
+    public MemberRepository memberRepository() {
+        return new MemoryMemberRepository();
+    }
+
+    public DiscountPolicy discountPolicy() {
+        return new FixDiscountPolicy();
+    }
+}
+````
+- `new MemoryMemberRepository()` 부분이 중복 제거되었으므로, 이제 `MemoryMemberRepository`를 다른 구현체로 변경할 때 한 부분만 변경하면 된다.
+- `AppConfig`를 보면 역할과 구현 클래스가 한눈에 들어와 애플리케이션 전체 구성이 어떻게 되어있는지 빠르게 파악이 가능
+
+
+- - -
+## ✔ 새로운 구조와 할인 정책 적용
