03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용 (진행중)

--- a/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -355,3 +355,25 @@ public class AppConfig {
 
 - - -
 ## ✔ 새로운 구조와 할인 정책 적용
+- FixDiscountPolicy(정액 할인 정책) --> RateDiscountPolicy(정률% 할인 정책)
+- 정책을 변경해도 구성 영역만 영향을 받고, 사용 영역은 전혀 영향을 받지 않는다.
+![할인 정책의 변경](https://user-images.githubusercontent.com/54324782/209417292-b6f5bf3c-323d-47c2-8f51-0749ff0d4ea7.png)
+
+- hello.core > AppConfig
+````java
+public class AppConfig {
+    .
+    .
+    public DiscountPolicy discountPolicy() {
+        // return new FixDiscountPolicy();
+        return new RateDiscountPolicy();
+    }
+}
+````
+- [테스트] hello.core > OrderApp.java
+````java
+// Order order = orderService.createOrder(memberId, "itemA", 10000);
+Order order = orderService.createOrder(memberId, "itemA", 20000);
+````
+![테스트](https://user-images.githubusercontent.com/54324782/209417412-bf3c25c4-61dc-42a8-b51f-86cbb08876f9.png)
+
