--- a/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -371,9 +371,34 @@ public class AppConfig {
 }
 ````
 - [테스트] hello.core > OrderApp.java
+  - 가격이 20,000원일 경우 할인 금액이 2,000원임을 확인
 ````java
 // Order order = orderService.createOrder(memberId, "itemA", 10000);
 Order order = orderService.createOrder(memberId, "itemA", 20000);
 ````
 ![테스트](https://user-images.githubusercontent.com/54324782/209417412-bf3c25c4-61dc-42a8-b51f-86cbb08876f9.png)
 
+
+- - -
+## ✔ 좋은 객체 지향 설계의 5가지 원칙의 적용
+### 1. SRP: 단일 책임 원칙
+한 클래스는 하나의 책임만 가져야 한다.
+- 클라이언트 객체는 직접 구현 객체를 생성하고, 연결하고, 실행하는 다양한 책임을 가지고 있음
+- SRP 단일 책임 원칙을 따르면서 관심사를 분리함
+  - `구현 객체를 생성하고 연결하는 책임`은 AppConfig가 담당
+  - `실행하는 책임`만 클라이언트 객체가 담당
+
+### 2. DIP: 의존관계 역전 원칙
+프로그래머는 "추상화에 의존해야지, 구체화에 의존하면 안된다." -> 의존성 주입은 이 원칙을 따르는 방법 중 하나
+- 새로운 할인 정책을 개발하고, 적용하려고 하니 클라이언트 코드도 함께 변경해야 했다.
+- 클라이언트 코드가 `DiscountPolicy` 추상화 인터페이스에만 의존하도록 코드를 변경
+  - 하지만 클라이언트 코드는 인터페이스만으로는 아무것도 실행할 수 없다.
+- AppConfig가 `FixDiscountPolicy` 객체 인스턴스를 클라이언트 코드 대신 생성해서 클라이언트 코드에 의존관계를 주입
+  - 이로써 DIP 원칙을 따르면서 문제도 해결
+
+### 3. OCP: 개방-폐쇄의 원칙
+소프트웨어 요소는 화장에는 열려 있으나 변경에는 닫혀 있어야 한다.
+- 다형성을 사용하고 클라이언트가 DIP를 지킴
+- 애플리케이션을 사용 영역과 구성 영역으로 나눔
+- AppConfig가 의존관계를 `FixDiscountPolicy` --> `RateDiscountPolicy`로 변경하여 클라이언트 코드에 주입하므로 클라이언트 코드는 변경하지 않아도 됨
+  - 즉, 소프트웨어 요소를 새롭게 확장해도 사용 영역의 변경은 닫혀 있다!
