--- a/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -402,3 +402,53 @@ Order order = orderService.createOrder(memberId, "itemA", 20000);
 - 애플리케이션을 사용 영역과 구성 영역으로 나눔
 - AppConfig가 의존관계를 `FixDiscountPolicy` --> `RateDiscountPolicy`로 변경하여 클라이언트 코드에 주입하므로 클라이언트 코드는 변경하지 않아도 됨
   - 즉, 소프트웨어 요소를 새롭게 확장해도 사용 영역의 변경은 닫혀 있다!
+
+- - -
+## ✔ IoC, DI, 그리고 컨테이너
+### 1. 제어의 역전 (IoC: Inversion of Control)
+- 기존에는 클라이언트 구현 객체가 스스로 필요한 서버 구현 객체를 생성하고, 연결하고, 실행함
+  - 이후 AppConfig가 등장하여 구현 객체는 자신의 로직을 실행하는 역할만 담당
+  - 프로그램의 제어 흐름은 이제 AppConfig가 가져간다. (ex. OrderServiceImpl은 필요한 인터페이스들을 호출하지만 어떤 구현 객체들이 실행될지 모른다.)
+- 프로그램에 대한 제어 흐름에 대한 권한은 모두 AppConfig가 가지고 있다.
+  - 심지어 OrderServiceImpl도 AppConfig가 생성
+  - 또한, AppConfig는 OrderServiceImpl이 아닌 OrderService 인터페이스의 다른 구현 객체를 생성하고 실행할 수 있다.
+  - 그런 사실도 모른체 OrderServiceImpl은 묵묵히 자신의 로직을 실행할 뿐
+- 이렇듯 프로그램의 `제어 흐름`을 직접 제어하는 것이 아니라 `외부에서 관리`하는 것을 `제어의 역전(IoC)`이라 한다.
+
+### 💡 프레임워크 vs 라이브럴
+```
+- 프레임워크 : 내가 작성한 코드를 제어하고, 대신 실행 (ex. JUnit -> Junit은 @BeforeEach와 같이 자신만의 LifeCycle이 존재)
+- 라이브러리 : 내가 작성한 코드가 직접 제어의 흐름을 담당
+```
+
+### 2. 의존관계 주입 (DIP: Dependency Injection)
+- OrderServiceImpl은 DiscountPolicy 인터페이스에 의존한다. 실제 어떤 구현 객체가 사용될지는 모른다.
+- 의존관계는 `정적인 클래스 의존 관계와, 실행 시점에 결정되는 동적인 객체(인스턴스) 의존 관계` 둘을 분리해서 생각
+
+### 💡 정적인 클래스 의존관계
+- 클래스가 사용하는 import 코드만 보고 의존관계를 쉽게 판단할 수 있다.
+- 정적인 의존관계는 애플리케이션을 실행하지 않아도 분석할 수 있다.
+- 아래 "클래스 다이어그램"에서 OrderServiceImpl은 MemberRepository, DiscountPolicy에 의존한다는 것을 알 수 있다.
+- 하지만 이러한 클래스 의존관계 만으로는 실제 어떤 객체가 OrderServiceImpl에 주입될지 알 수 없다.
+
+#### "클래스 다이어그램"
+![클래스 다이어그램](https://user-images.githubusercontent.com/54324782/209418561-6a63a7bf-b226-41ad-a127-1f9a871854e2.png)
+
+### 💡 동적인 객체 인스턴스 의존관계
+- 애플리케이션 실행 시점에 실제 생성된 객체 인스턴스의 참조가 연결된 의존 관계
+
+#### "객체 다이어그램"
+![객체 다이어그램](https://user-images.githubusercontent.com/54324782/209418578-cb6bc6e5-c511-4b59-9f83-70dfef11419e.png)
+
+- 애플리케이션 `실행 시점(런타임)`에 외부에서 실제 구현 객체를 생성하고 클라이언트에 전달해서 클라이언트와 서버의 실제 읜존관계가 연결되는 것을 `의존관계 주입`이라 한다.
+- 객체 인스턴스를 생성하고, 그 참조값을 전달해서 연결된다.
+- 의존관계 주입을 사용하면 클라이언트 코드를 변경하지 않고, 클라이언트가 호출하는 대상의 타입 인스턴스를 변경할 수 있다.
+- 의존관계 주입을 사용하면 `정적인 클래스 의존관계`를 변경하지 않고, `동적인 객체 인스턴스 의존관계`를 쉽게 변경할 수 있다.
+
+### 3. IoC 컨테이너, DI 컨테이너
+- AppConfig처럼 `객체를 생성`하고 `관리`하면서 `의존관계`를 `연결`해주는 것
+  - 의존관계 주입에 초점을 맞추어 최근에는 주로 DI 컨테이너라 한다.
+  - 또는 어셈블러, 오브젝트 팩토리 등으로 불리기도 한다.
+
+
+- - -
