03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용 (진행중)

--- a/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
+++ b/스프링 핵심 원리 - 기본편/03. 스프링 핵심 원리 이해2 - 객체 지향 원리 적용.md
@@ -452,3 +452,117 @@ Order order = orderService.createOrder(memberId, "itemA", 20000);
 
 
 - - -
+## ✔ 스프링으로 전환하기
+### 1. AppConfig 스프링 기반으로 변경
+hello.core > AppConfig.java
+- AppConfig에 설정을 구성한다는 의미로 `@Configuration` 설정
+- 각 메서드에 `@Bean` 설정 --> 이를 통해 스프링 컨테이너에 스프링 빈으로 등록
+````java
+.
+.
+.
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public MemberService memberService() {
+        return new MemberServiceImpl(memberRepository());
+    }
+    @Bean
+    public OrderService orderService() {
+        return new OrderServiceImpl(memberRepository(), discountPolicy());
+    }
+    @Bean
+    public MemberRepository memberRepository() {
+        return new MemoryMemberRepository();
+    }
+    @Bean
+    public DiscountPolicy discountPolicy() {
+//        return new FixDiscountPolicy();
+        return new RateDiscountPolicy();
+    }
+}
+
+````
+
+### 2. MemberApp에 스프링 컨테이너 적용
+hello.core > MemberApp
+````java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+
+public class MemberApp {
+
+    public static void main(String[] args) {
+//        AppConfig appConfig = new AppConfig();
+//        MemberService memberService = appConfig.memberService(); // AppConfig 연결
+        // ApplicationContext가 모든 객체들을 관리
+        ApplicationContext applicationContext = new AnnotationConfigApplicationContext(AppConfig.class);
+        MemberService memberService = applicationContext.getBean("memberService", MemberService.class);
+        
+        Member member = new Member(1L, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        Member findMember = memberService.findMember(1L);
+        System.out.println("find Member = " + findMember.getName());
+        System.out.println("new member = " + member.getName());
+    }
+}
+````
+
+### 3. OrderApp에 스프링 컨테이너 적용
+````java
+package hello.core;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import hello.core.member.MemberService;
+import hello.core.order.Order;
+import hello.core.order.OrderService;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+
+public class OrderApp {
+
+    public static void main(String[] args) {
+//        AppConfig appConfig = new AppConfig();
+//        MemberService memberService = appConfig.memberService(); // AppConfig 연결
+//        OrderService orderService = appConfig.orderService(); // AppConfig 연결
+        ApplicationContext applicationContext = new AnnotationConfigApplicationContext(AppConfig.class);
+        MemberService memberService = applicationContext.getBean("memberService", MemberService.class);
+        OrderService orderService = applicationContext.getBean("orderService", OrderService.class);
+
+        Long memberId = 1L;
+        Member member = new Member(memberId, "memberA", Grade.VIP);
+        memberService.join(member);
+
+        Order order = orderService.createOrder(memberId, "itemA", 10000);
+
+        System.out.println("order = " + order); // toString() 를 호출
+        // System.out.println("order.calculatePrice = " + order.calculatePrice());
+    }
+}
+````
+![실행](https://user-images.githubusercontent.com/54324782/209419229-228ae510-b9cb-45c2-b69f-dd798c66ddae.png)
+
+- 앞 5개의 DEBUG 출력 값: 스프링에서 내부적으로 필요해서 등록하는 스프링 빈
+- 뒤 5개의 DEBUG 출력 값: `@Bean` 설정해주었던 스프링 빈
+
+### 💡 스프링 컨테이너
+- `ApplicationContext`를 스프링 컨테이너라 한다.
+- 기존에는 `AppConfig`를 사용해서 직접 객체를 생성하고 DI를 했지만, 이제부터는 스프링 컨테이너를 통해서 사용
+- 스프링 컨테이너는 `@Configuration`이 붙은 AppConfig를 설정(구성) 정보로 사용한다. 여기서 `@Bean`이라 적힌 메서드를 모두 호출해서 반환된 객체를 스프링 컨테이너에 등록한다.
+  - 이렇게 스프링 컨테이너에 등록된 객체를 `스프링 빈`이라 한다.
+- 이전에는 개발자가 필요한 객체를 `AppConfig`를 통해 직접 조회했지만, 이제부터는 `스프링 컨테이너`를 통해 필요한 스프링 빈(객체)을 찾아야 한다.
+  - 스프링 빈은 `applicationContext.getBean()` 메서드를 통해 찾을 수 있다.
+
+
+- - -
