04. 스프링 컨테이너와 스프링 빈 (진행중)

--- a/스프링 핵심 원리 - 기본편/04. 스프링 컨테이너와 스프링 빈.md
+++ b/스프링 핵심 원리 - 기본편/04. 스프링 컨테이너와 스프링 빈.md
@@ -95,3 +95,65 @@ void findApplicationBean() {
 - `ac.getBean()` : 빈 이름으로 빈 객체(인스턴스)를 조회
 - 스프링이 내부에서 사용하는 빈은 `getRole()`로 구분할 수 있다.
 ```
+
+
+- - -
+## ✔ 스프링 빈 조회 - 기본
+- 스프링 컨테이너에서 스프링 빈을 찾는 가장 기본적인 방법
+  - `ac.getBean(빈이름, 타입)`
+  - `ac.getBean(타입)`
+- 조회 대상 스프링 빈이 없으면 예외 발생
+  - `NoSuchBeanDefinitionException: No bean named 'xxxxx' available`
+
+````java
+package hello.core.beanfind;
+
+import hello.core.AppConfig;
+import hello.core.member.MemberService;
+import hello.core.member.MemberServiceImpl;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.NoSuchBeanDefinitionException;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import static org.assertj.core.api.Assertions.*;
+
+class ApplicationContextBasicFindTest {
+    AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(AppConfig.class);
+
+    @Test
+    @DisplayName("빈 이름으로 조회")
+    void findBeanByName() {
+        MemberService memberService = ac.getBean("memberService", MemberService.class);
+        // System.out.println("memberService = " + memberService);
+        // System.out.println("memberService.getClass() = " + memberService.getClass());
+        // memberService가 MemberServiceImpl의 인스턴스이면 성공
+        assertThat(memberService).isInstanceOf(MemberServiceImpl.class);
+    }
+
+    @Test
+    @DisplayName("이름 없이 타입만으로 조회")
+    void findBeanByType() {
+        MemberService memberService = ac.getBean(MemberService.class);
+        assertThat(memberService).isInstanceOf(MemberServiceImpl.class);
+    }
+
+    @Test
+    @DisplayName("구체 타입으로 조회")
+    void findBeanByName2() {
+        MemberServiceImpl memberService = ac.getBean("memberService", MemberServiceImpl.class);
+        assertThat(memberService).isInstanceOf(MemberServiceImpl.class);
+    }
+
+    @Test
+    @DisplayName("빈 이름으로 조회X")
+    void findBeanByNameX() {
+        // ac.getBean("xxxxx", MemberService.class);
+        Assertions.assertThrows(NoSuchBeanDefinitionException.class, () -> ac.getBean("xxxxx", MemberService.class));
+    }
+}
+````
+![결과](https://user-images.githubusercontent.com/54324782/209424953-f39ce0ce-6229-4d37-b816-8b63cefcdca2.png)
+
+
+- - -
