04. 스프링 컨테이너와 스프링 빈 (진행중)

--- a/스프링 핵심 원리 - 기본편/04. 스프링 컨테이너와 스프링 빈.md
+++ b/스프링 핵심 원리 - 기본편/04. 스프링 컨테이너와 스프링 빈.md
@@ -309,17 +309,17 @@ public class ApplicationContextExtendsFindTest {
 ## ✔ BeanFactory와 ApplicationContext
 ![image](https://user-images.githubusercontent.com/54324782/210171246-b055546a-43c5-46d5-8017-2017436036e2.png)
 
-- BeanFactory
-  - 스프링 컨테이너의 최상위 인터페이스
-  - 스프링 빈을 관리하고 조회하는 역할을 담당
-  - `getBean()`을 제공
-- ApplicationContext
-  - BeanFactory 기능을 모두 상속받아서 제공
-  - BeanFactory 기능 외에도, 수 많은 부가 기능을 제공
-    - MessageSource(메시지소스를 활용한 국제화 기능): 예를 들어 한국에서 들어오면 한국어로, 영어권에서 들어오면 영어로 출력
-    - EnvironmentCapable(환경변수): 로컬, 개발, 운영 등을 구분해서 처리
-    - ApplicationEventPublisher(애플리케이션 이벤트): 이벤트를 발행하고 구독하는 모델을 편리하게 지원
-    - ResourceLoader(편리한 리소스 조회): 파일, 클래스패스, 외부 등에서 리소스를 편리하게 조회
+### 1.BeanFactory
+- 스프링 컨테이너의 최상위 인터페이스
+- 스프링 빈을 관리하고 조회하는 역할을 담당
+- `getBean()`을 제공
+### 2.ApplicationContext
+- BeanFactory 기능을 모두 상속받아서 제공
+- BeanFactory 기능 외에도, 수 많은 부가 기능을 제공
+  - MessageSource(메시지소스를 활용한 국제화 기능): 예를 들어 한국에서 들어오면 한국어로, 영어권에서 들어오면 영어로 출력
+  - EnvironmentCapable(환경변수): 로컬, 개발, 운영 등을 구분해서 처리
+  - ApplicationEventPublisher(애플리케이션 이벤트): 이벤트를 발행하고 구독하는 모델을 편리하게 지원
+  - ResourceLoader(편리한 리소스 조회): 파일, 클래스패스, 외부 등에서 리소스를 편리하게 조회
 
 ![ApplicationContext](https://user-images.githubusercontent.com/54324782/210171391-8070b37d-c5ec-4bb0-b06e-67bce0336389.png)
 
