04. 스프링 컨테이너와 스프링 빈 (진행중)

--- a/스프링 핵심 원리 - 기본편/04. 스프링 컨테이너와 스프링 빈.md
+++ b/스프링 핵심 원리 - 기본편/04. 스프링 컨테이너와 스프링 빈.md
@@ -328,3 +328,72 @@ public class ApplicationContextExtendsFindTest {
 - ApplicationContext는 빈 관리기능 + 편리한 부가 기능을 제공한다.
 - BeanFactory를 직접 사용할 일은 거의 없다. 부가기능이 포함된 ApplicationContext를 사용한다.
 - BeanFactory나 ApplicationContext를 스프링 컨테이너라 한다.
+
+
+- - -
+## ✔ 다양한 설정 형식 지원 - 자바 코드, XML
+스프링 컨테이너는 다양한 형식의 설정 정보(자바 코드, XML, Groovy 등등)를 받아드릴 수 있게 유연하게 설계되어 있다.
+
+![image](https://user-images.githubusercontent.com/54324782/211812749-ae897c64-6308-4c82-9898-fe914c57c0c7.png)
+
+### 1. 어노테이션 기반 자바 코드 설정 사용
+- `new AnnotationConfigApplicationContext(AppConfig.class)`
+- `AnnotationConfigApplicationContext` 클래스를 사용하면서 자바 코드로 된 설정 정보를 넘긴다.
+
+### 2. XML 설정 사용
+- 최근에는 스프링 부트를 많이 사용하면서 XML 기반의 설정은 잘 사용하지 않는다.
+- XML을 사용하면 컴파일 없이 빈 설정 정보를 변경할 수 있다.
+- `GenericXmlApplicationContext` 를 사용하면서 `xml` 설정 파일을 넘긴다.
+
+### 💡 XmlAppConfig 사용 자바 코드
+test > java > hello.core.xml > XmlAppContext.java (class)
+````java
+package hello.core.xml;
+
+import hello.core.member.MemberService;
+import org.junit.jupiter.api.Test;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.support.GenericXmlApplicationContext;
+
+import static org.assertj.core.api.Assertions.*;
+
+public class XmlAppContext {
+    @Test
+    void xmlAppContext() {
+        ApplicationContext ac = new GenericXmlApplicationContext("appConfig.xml");
+
+        MemberService memberService = ac.getBean("memberService", MemberService.class);
+        assertThat(memberService).isInstanceOf(MemberService.class);
+    }
+}
+````
+
+src > main > resources/appConfig.xml
+````xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean id="memberService" class="hello.core.member.MemberServiceImpl">
+        <constructor-arg name="memberRepository" ref="memberRepository" />
+    </bean>
+
+    <bean id="memberRepository" class="hello.core.member.MemoryMemberRepository" />
+
+    <bean id="orderService" class="hello.core.order.OrderServiceImpl">
+        <constructor-arg name="memberRepository" ref="memberRepository" />
+        <constructor-arg name="discountPolicy" ref="discountPolicy" />
+    </bean>
+
+    <bean id="discountPolicy" class="hello.core.discount.RateDiscountPolicy" />
+</beans>
+````
+
+![Tests passed](https://user-images.githubusercontent.com/54324782/211822721-2220bc1c-11d5-4218-90d6-0b52fe64cfdb.png)
+
+- xml 기반의 `appConfig.xml` 스프링 설정 정보와 자바 코드로 된 `AppConfig.java` 설정 정보를 비교해보면 거의 비슷하다는 것을 알 수 있다.
+
+| appConfig.xml | AppConfig.java |
+|:--------:|:--------:|
+| ![appConfig.xml](https://user-images.githubusercontent.com/54324782/211823092-37d298b4-8185-4394-a869-f22da78424ad.png) | ![AppConfig.java](https://user-images.githubusercontent.com/54324782/211823192-3ce406b7-6122-45d0-bf1c-fd5f11e172bb.png)
