04. 스프링 컨테이너와 스프링 빈

--- a/스프링 핵심 원리 - 기본편/04. 스프링 컨테이너와 스프링 빈.md
+++ b/스프링 핵심 원리 - 기본편/04. 스프링 컨테이너와 스프링 빈.md
@@ -397,3 +397,77 @@ src > main > resources/appConfig.xml
 | appConfig.xml | AppConfig.java |
 |:--------:|:--------:|
 | ![appConfig.xml](https://user-images.githubusercontent.com/54324782/211823092-37d298b4-8185-4394-a869-f22da78424ad.png) | ![AppConfig.java](https://user-images.githubusercontent.com/54324782/211823192-3ce406b7-6122-45d0-bf1c-fd5f11e172bb.png)
+
+
+- - -
+## ✔ 스프링 빈 설정 메타 정보 - BeanDefinition
+- 스프링이 다양한 설정 형식을 지원하는 것 중심에는 `BeanDefinition` 이라는 추상화가 있다.
+- 쉽게 이야기해서 __역할과 구현을 개념적으로 나눈 것__ 이다.
+  - XML을 읽어서 BeanDefinition을 만들면 된다.
+  - 자바 코드를 읽어서 BeanDefinition을 만들면 된다.
+  - 스프링 컨테이너는 자바 코드인지, XML인지 몰라도 되며, 오직 BeanDefinition만 알면 된다.
+- `BeanDefinition`을 빈 설정 메타정보라 한다.
+  - `@Bean`, `<bean>` 당 각각 하나씩 메타 정보가 생성된다.
+- 스프링 컨테이너는 이 메타정보를 기반으로 스프링 빈을 생성한다.
+
+![BeanDefinition](https://user-images.githubusercontent.com/54324782/212466361-269c7361-fc97-413d-a6aa-15f1f314c717.png)
+![image](https://user-images.githubusercontent.com/54324782/212466610-a202df77-1c9f-4401-a2be-6fdd584060ec.png)
+
+- `AnnotationConfigApplicationContext`는 `AnnotatedBeanDefinitionReader`를 사용해서 `AppConfig.class`를 읽고 `BeanDefinition`을 생성한다.
+- `GenericXmlApplicationContext`는 `XmlBeanDefinitionReader`를 사용해서 `appConfig.xml` 설정 정보를 읽고 `BeanDefinition`을 생성한다.
+- 새로운 형식의 설정 정보가 추가되면, XxxBeanDefinitionReader를 만들어서 `BeanDefinition`을 생성하면 된다.
+
+### 💡 BeanDefinition 정보
+```
+- BeanClassName: 생성할 빈의 클래스 명(자바 설정처럼 팩토리 역할의 빈을 사용하면 없음)
+- factoryBeanName: 팩토리 역할의 빈을 사용할 경우 이름 (ex. appConfig)
+- factoryMethodName: 빈을 생성할 팩토리 메서드 지정 (ex. memberService)
+- Scope: 싱글톤(기본값)
+- lazyInit: 스프링 컨테이너를 생성할 때 빈을 생성하는 것이 아니라, 실제 빈을 사용할 때까지 최대한 생성을 지연처리 하는지 여부
+- InitMethodName: 빈을 생성하고, 의존관계를 적용한 뒤에 호출되는 초기화 메서드 명
+- DestroyMethodName: 빈의 생명주기가 끝나서 제거하기 직전에 호출되는 메서드 명
+- Constructor arguments, Properties: 의존관계 주입에서 사용한다. (자바 설정처럼 팩토리 역할의 빈을 사용하면 없음)
+```
+
+````java
+package hello.core.beandefinition;
+
+import hello.core.AppConfig;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.config.BeanDefinition;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+// import org.springframework.context.support.GenericXmlApplicationContext;
+
+public class BeanDefinitionTest {
+    AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(AppConfig.class);
+//    GenericXmlApplicationContext ac = new GenericXmlApplicationContext("appConfig.xml");
+
+    @Test
+    @DisplayName("빈 설정 메타정보 확인")
+    void findApplicationBean() {
+        String[] beanDefinitionNames = ac.getBeanDefinitionNames();
+        for (String beanDefinitionName : beanDefinitionNames) {
+            BeanDefinition beanDefinition = ac.getBeanDefinition(beanDefinitionName);
+
+            if (beanDefinition.getRole() == BeanDefinition.ROLE_APPLICATION) {
+                System.out.println("beanDefinitionName" + beanDefinitionName + " beanDefinition = " + beanDefinition);
+            }
+        }
+    }
+}
+
+````
+```
+// 출력 값
+beanDefinitionNameappConfig beanDefinition = Generic bean: class [hello.core.AppConfig$$EnhancerBySpringCGLIB$$8b28e0ca]; scope=singleton; abstract=false; lazyInit=null; autowireMode=0; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=null; factoryMethodName=null; initMethodName=null; destroyMethodName=null
+beanDefinitionNamememberService beanDefinition = Root bean: class [null]; scope=; abstract=false; lazyInit=null; autowireMode=3; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=appConfig; factoryMethodName=memberService; initMethodName=null; destroyMethodName=(inferred); defined in hello.core.AppConfig
+beanDefinitionNameorderService beanDefinition = Root bean: class [null]; scope=; abstract=false; lazyInit=null; autowireMode=3; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=appConfig; factoryMethodName=orderService; initMethodName=null; destroyMethodName=(inferred); defined in hello.core.AppConfig
+beanDefinitionNamememberRepository beanDefinition = Root bean: class [null]; scope=; abstract=false; lazyInit=null; autowireMode=3; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=appConfig; factoryMethodName=memberRepository; initMethodName=null; destroyMethodName=(inferred); defined in hello.core.AppConfig
+beanDefinitionNamediscountPolicy beanDefinition = Root bean: class [null]; scope=; abstract=false; lazyInit=null; autowireMode=3; dependencyCheck=0; autowireCandidate=true; primary=false; factoryBeanName=appConfig; factoryMethodName=discountPolicy; initMethodName=null; destroyMethodName=(inferred); defined in hello.core.AppConfig
+
+```
+
+### 💡 정리
+- BeanDefinition을 직접 생성해서 스프링 컨테이너에 등록할 수도 있지만, 실무에서 BeanDefinition을 직접 정의하거나 사용할 일은 거의 없다.
+- BeanDefinition으로 스프링 빈 설정 메타 정보를 추상화한다.
