--- a/스프링 핵심 원리 - 기본편/05. 싱글톤 컨테이너.md
+++ b/스프링 핵심 원리 - 기본편/05. 싱글톤 컨테이너.md
@@ -34,8 +34,84 @@ public class SingletonTest {
     }
 }
 ````
+![Tests passed](https://user-images.githubusercontent.com/54324782/212468579-132417f5-54d0-4116-a7c2-2ee27b06b643.png)
 
 - 스프링 없는 순수한 DI 컨테이너인 AppConfig는 요청을 할 때마다 객체를 새로 생성한다.
 - 고객 트래픽이 초당 100이 나오면 초당 100개 객체가 생성되고 소멸된다. --> 메모리 낭비가 심함
 - `싱글톤 패턴`을 통해 해당 객체가 딱 1개만 생성되고, 공유하도록 설계하면 된다.
+
+
+- - -
+## ✔ 싱글톤 패턴
+- 클래스의 인스턴스가 딱 1개만 생성되는 것을 보장하는 디자인 패턴
+- 따라서 객체 인스턴스를 2개 이상 생성하지 못하도록 막아야 한다.
+    - private 생성자를 사용해 외부에서 임의로 new 키워드를 사용하지 못하도록 막아야 한다.
+
+### 1. 싱글톤 패턴 적용
+test > java > hello.core.singleton > SingletonService.java (class)
+````java
+package hello.core.singleton;
+
+public class SingletonService {
+    // 1. static 영역에 객체 instance를 딱 1개만 생성
+    private static final SingletonService instance = new SingletonService();
+    // 2. public으로 열어서 객체 인스턴스가 필요하면 이 static 메서드를 통해서만 조회하도록 허용
+    public static SingletonService getInstance() {
+        return instance; // 이 메서드를 호출하면 항상 같은 인스턴스를 반환
+    }
+    // 3. 생성자를 private으로 선언해서 외부에서 new 키워드를 사용한 객체 생성을 못하도록 막는다.
+    private SingletonService() {
+        
+    }
+    
+    public void logic() {
+        System.out.println("싱글톤 객체 로직 호출");
+    }
+}
+````
+
+### 2. 싱글톤 패턴을 사용하는 테스트 코드
+test > java > hello.core.singleton > SingletonTest.java
+````java
+@Test
+@DisplayName("싱글톤 패턴을 적용한 객체 사용")
+public void singletonServiceTest() {
+    // private으로 생성자를 막아두었으므로 new로 생성 시 컴파일 오류 발생
+    // new SingletonService();
+
+    // 1. 조회: 호출할 때마다 같은 객체를 반환
+    SingletonService singletonService1 = SingletonService.getInstance();
+    // 2. 조회: 호출할 때마다 같은 객체를 반환
+    SingletonService singletonService2 = SingletonService.getInstance();
+
+    // 참조값이 같은 것을 확인
+    System.out.println("singletonService1 = " + singletonService1);
+    System.out.println("singletonService2 = " + singletonService2);
+
+    // singletonService1 == singletonService2
+    Assertions.assertThat(singletonService1).isSameAs(singletonService2);
+
+    singletonService1.logic();
+}
+````
+![싱글톤 패턴 사용](https://user-images.githubusercontent.com/54324782/212469256-a019e67b-f20b-439f-a237-12cfb3c507f4.png)
+
+```
+// 참고
+싱글톤 패턴을 구현하는 방법은 여러가지가 있다.
+여기서는 객체를 미리 생성해두는 가장 단순하고 안전한 방법을 사용.
+```
+- private으로 new 키워드를 막아두었다.
+- 호출할 때마다 같은 객체 인스턴스를 반환하는 것을 확인할 수 있다.
+- `싱글톤 패턴`을 적용하면 고객의 요청이 올 때마다 객체를 생성하는 것이 아니라, 이미 만들어진 객체를 공유해서 효율적으로 사용할 수 있다. 하지만 싱글톤 패턴은 수 많은 문제점들을 가지고 있다.
+
+### 3. 싱글톤 패턴 문제점
+- 싱글톤 패턴을 구현하는 코드 자체가 많이 들어간다.
+- 의존관계상 클라이언트가 구체 클래스에 의존한다. --> `DIP를 위반`
+- 클라이언트가 구체 클래스에 의존해서 `OCP 원칙을 위반`할 가능성이 높다.
+- 테스트하기 어렵다.
+- 내부 속성을 변경하거나 초기화 하기 어렵다.
+- private 생성자로 자식 클래스를 만들기 어렵다.
+- 결론적으로 유연성이 떨어진다.
+- 안티패턴으로 불리기도 한다.
 
