05. 싱글톤 컨테이너 (진행중)

--- a/스프링 핵심 원리 - 기본편/05. 싱글톤 컨테이너.md
+++ b/스프링 핵심 원리 - 기본편/05. 싱글톤 컨테이너.md
@@ -115,3 +115,50 @@ public void singletonServiceTest() {
 - 결론적으로 유연성이 떨어진다.
 - 안티패턴으로 불리기도 한다.
 
+
+- - -
+## ✔ 싱글톤 컨테이너
+- `스프링 컨테이너`는 싱글톤 패턴의 문제점을 해결하면서, 객체 인스턴스를 싱글톤(1개만 생성)으로 관리한다.
+- `스프링 빈`이 바로 싱글톤으로 관리되는 빈이다.
+
+### 1. 싱글톤 컨테이너
+- 스프링 컨테이너는 싱글톤 패턴을 적용하지 않아도, 객체 인스턴스를 싱글톤으로 관리한다.
+- 스프링 컨테이너는 `싱글톤 컨테이너` 역할을 한다.
+    - 이렇게 싱글톤 객체를 생성하고 관리하는 기능을 `싱글톤 레지스트리`라 한다.
+- 이러한 스프링 컨테이너의 기능 덕분에 싱글톤 패턴의 모든 단점을 해결하면서 객체를 싱글톤으로 유지할 수 있다.
+    - 싱글톤 패턴을 위한 지저분한 코드가 들어가지 않아도 된다.
+    - DIP, OCP, 테스트, private 생성자로부터 자유롭게 싱글톤을 사용할 수 있다.
+
+### 2. 스프링 컨테이너를 사용하는 테스트 코드
+````java
+@Test
+@DisplayName("스프링 컨테이너와 싱글톤")
+void springContainer() {
+    ApplicationContext ac = new AnnotationConfigApplicationContext(AppConfig.class);
+
+    // 1. 조회: 호출할 때마다 같은 객체를 반환
+    MemberService memberService1 = ac.getBean("memberService", MemberService.class);
+    // 2. 조회: 호출할 때마다 같은 객체를 반환
+    MemberService memberService2 = ac.getBean("memberService", MemberService.class);
+
+    // 참조값이 같은 것을 확인
+    System.out.println("memberService1 = " + memberService1);
+    System.out.println("memberService2 = " + memberService2);
+
+    // memberService1 == memberService2
+    Assertions.assertThat(memberService1).isSameAs(memberService2);
+}
+````
+![싱글톤 컨테이너](https://user-images.githubusercontent.com/54324782/212469908-1d3092b6-b202-40f6-915f-a0cd742e81c9.png)
+
+### 3. 싱글톤 컨테이너 적용 후
+![image](https://user-images.githubusercontent.com/54324782/212469924-823df4ad-08b9-4031-b937-e4da6085ae80.png)
+
+- 고객의 요청이 올 때마다 객체를 생성하는 것이 아니라, 이미 만들어진 객체를 `공유`해서 효율적으로 재사용할 수 있다.
+
+```
+// 참고
+스프링의 기본 빈 등록 방식은 싱글톤이지만, 싱글톤 방식만 지원하는 것은 아니다.
+요청할 때마다 새로운 객체를 생성해서 반환하는 기능도 제공한다.
+```
+
